fixed :full screen header alignments and border

--- a/src/main/webapp/content/scss/partials/_flair-bi-content-header.scss
+++ b/src/main/webapp/content/scss/partials/_flair-bi-content-header.scss
@@ -29,7 +29,7 @@
         }
         .line{
                 width: 1px;
-                height: 30px;
+                height: 39px;
                 background: #e4e4e4;
                 float: left;
                 margin: 4px 5px 0 5px;
@@ -216,7 +216,7 @@
             justify-content: flex-start;
             .line{
                 width: 1px;
-                height: 30px;
+                height: 39px;
                 background: #e4e4e4;
                 float: left;
                 margin: 4px 5px 0 5px;
@@ -249,15 +249,29 @@
                     display: none;
                 }
             }
+            .bookmarks-dropdowns{
+                margin-left: auto;
+                padding-left: 5px;
+            }
             .settings{
                 display:flex;
                 .settings-item{
                     margin-top: -15px;
                     width: 50px;
                 }
+                .header-color{
+                    margin-left: 8%;
+                    margin-right: 8%;
+                }
+                .container-color{
+                    margin-right: -15%;
+                    margin-left: 10%;
+                }
+            }
+            .add-bookmark{
+                margin-right: 9px;
             }
             .show {
-                margin-right: 4%;
             }
             menu-component {
                .menu-container .menu {
